# Real-Time-Ray-Tracing-in-OpenGL

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  bvhTest  bvhTest.c  copymain.c  estPi  estPi.c  main.c  raytracing
.cache/clangd/index/: camera.c.A276B70645C6F2E2.idx  camera.h.B3FE6E1BE2CD5D73.idx  glad.c.E468FCF307684C03.idx  hittable.c.CC957B8FC46CEF5E.idx  hittable.h.258699B7AECA51C7.idx  main.c.A09EA7E792FDB814.idx  nodes.c.AE56F78F48140C25.idx  nodes.h.114C9EDAEC31FFC9.idx  random.c.DEAC328BD4EAAA52.idx  random.h.304C2E8B8F0D0135.idx  renderInfo.c.0469A50F028DC687.idx  renderInfo.h.1054CC51004723DB.idx  scene.c.DE608971D548ABBE.idx  scene.h.314264362CD459BD.idx  shader.c.2274535B7C0A6A2A.idx  (+4 more)
examples/rt_sphere/: build.sh
examples/rt_triangle/: CMakeLists.txt  build.bat  build.sh
examples/rt_triangle/include/: shader.h
examples/rt_triangle/shaders/: RT_PBR.glsl
examples/rt_triangle/src/: camera.c  main.c  shader.c
glad/src/: glad.c
include/: aabb.h  camera.h  hittable.h  nodes.h  random.h  renderInfo.h  scene.h  shader.h
include/glad/: glad.h
models/: cornellbox.mtl  cup.mtl  ground.mtl  rainbow.mtl  rocks.mtl  sphere.mtl  spookycat.mtl
shaders/: RT_PBR.glsl  TAA.glsl  cShader.glsl  copy2cShader.glsl  copy3cShader.glsl  copycShader.glsl  hitBB.glsl  vShader.glsl
src/: .utils1  .utils1h  camera.c  camera.h  glad.c  hittable.c  hittable.h  main.c  nodes.c  nodes.h  random.c  random.h  renderInfo.c  scene.c  scene.h  shader.c  shader.h
unused/: bvh.c  bvh.h  bvhObjects.c  bvhObjects.h  model.c  model.h
(+8 files in other folders)
